--- a/gb/22/9/12/n13822887.md
+++ b/gb/22/9/12/n13822887.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>防腐剂易引皮肤发炎 你用的化妆品安全吗？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817872-makeup-g5e4e6151d_1920-600x400.jpg" />
 <h6>各式各样的化妆品，琳琅满目。（Pixabay）
 </h6>
 <hr>
-	<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%96%E5%A6%86%E5%93%81.md#1">化妆品</a>工业最常使用的防腐剂，除了杀菌剂（paraben）外，首推咪坐丁尿素（imidazolidinyl trea）和尿素醛（diazolidinyl trea）――它们已被美国皮肤学院（The American Academy of Dermatology）证实是引起皮肤发炎的主要原因。</p>
-<p>另有两种<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%96%E5%AD%A6%E9%98%B2%E8%85%90%E5%89%82.md#1">化学防腐剂</a>，分别为Germall II 和Germall 115，它们的杀菌能力都不是非常好，因此必须与其他防腐剂混合使用。这两种化学物质都有毒性，其中Germall 115 在温度超过37℃ 时会释放甲醛。</p>
+	<p>化妆品工业最常使用的防腐剂，除了杀菌剂（paraben）外，首推咪坐丁尿素（imidazolidinyl trea）和尿素醛（diazolidinyl trea）――它们已被美国皮肤学院（The American Academy of Dermatology）证实是引起皮肤发炎的主要原因。</p>
+<p>另有两种化学防腐剂，分别为Germall II 和Germall 115，它们的杀菌能力都不是非常好，因此必须与其他防腐剂混合使用。这两种化学物质都有毒性，其中Germall 115 在温度超过37℃ 时会释放甲醛。</p>
 <p><strong>◆ </strong><strong>甲基（methyl</strong><strong>）、丙基（propyl</strong><strong>）、苯甲酸乙酯（ethyl paraben</strong><strong>）</strong></p>
-<p>主要是用来抑制微生物成长，延长产品的保存期限。虽然这几种原料被<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%96%E5%A6%86%E5%93%81.md#1">化妆品</a>业者广泛使用，但它们具有强烈毒素，并会引起过敏反应。</p>
+<p>主要是用来抑制微生物成长，延长产品的保存期限。虽然这几种原料被化妆品业者广泛使用，但它们具有强烈毒素，并会引起过敏反应。</p>
 <p><strong>◆ </strong><strong>矿脂（petrolatum</strong><strong>）</strong></p>
 <p>一种矿物油，使用在皮肤上时往往会引发许多问题。矿脂会让皮肤比较容易被太阳晒伤，干扰身体的自然保湿机制，并且导致皮肤干燥粗糙。使用含有矿脂成分的化妆品，通常效果适得其反。化妆品业者之所以使用矿脂，是因为这种原料非常便宜。</p>
 <p><strong>◆ </strong><strong>丙二醇（propylene glycol</strong><strong>）</strong></p>
@@ -20,60 +20,51 @@
 <p>是一种用来制造泡沫的人工界面活性剂。这种物质会刺激眼睛、引起皮肤发疹、头发脱落、过敏反应等。有些化妆品经常喜欢将这项成分标示为“来自椰子”，以谎称产品原料来自天然。</p>
 <p><strong>◆ </strong><strong>硬脂氯化物（stearalkonium chloride</strong><strong>）</strong></p>
 <p>一种会引起过敏反应的化学物质，常见于润发乳和乳液中。这种原料最初是布料工厂里的布料纤维柔软剂，由于价格比蛋白质和天然药草便宜，所以经常使用在润发乳里，可是这种物质却带有毒性。</p>
-<p><strong>◆ </strong><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E9%A2%9C%E6%96%99.md#1">人工颜料</a></strong></p>
-<p>各种可以让人变得更“美丽”的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E9%A2%9C%E6%96%99.md#1">人工颜料</a>都应该尽量避免使用。通常人工颜料在产品上会标示为沉淀颜料（FD&amp;C）或色素（D&amp;C），然后再加上颜色名称和数字，譬如FD&amp;C 红色6 号或D&amp;C 绿色6 号。研究证实，人工颜料会引发癌症。</p>
-<p><strong>◆ </strong><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E9%A6%99%E5%91%B3.md#1">人工香味</a></strong></p>
-<p>化妆品中所使用的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E9%A6%99%E5%91%B3.md#1">人工香味</a>，总共多达400 余种成分。但化妆品上只会笼统标示“香味”一词，让人完全无从得知其中的化学成分。</p>
+<p><strong>◆ </strong><strong>人工颜料</strong></p>
+<p>各种可以让人变得更“美丽”的人工颜料都应该尽量避免使用。通常人工颜料在产品上会标示为沉淀颜料（FD&amp;C）或色素（D&amp;C），然后再加上颜色名称和数字，譬如FD&amp;C 红色6 号或D&amp;C 绿色6 号。研究证实，人工颜料会引发癌症。</p>
+<p><strong>◆ </strong><strong>人工香味</strong></p>
+<p>化妆品中所使用的人工香味，总共多达400 余种成分。但化妆品上只会笼统标示“香味”一词，让人完全无从得知其中的化学成分。</p>
 <p>这些化学物质会引起诸多问题，包括头痛、头昏眼花、发疹、色素沉淀、剧烈咳嗽、皮肤发炎。当化妆品并未明白标示原料成分而仅仅注明“香味”时，产品内通常都会含有人工香味，对于这种化妆品最好敬而远之。</p>
 <p><strong>◆ </strong><strong>三乙醇胺（triethanolamine</strong><strong>）</strong></p>
 <p>化妆品厂商经常使用三乙醇胺（triethanolamine）平衡产品的酸碱值（pH）。许多厂商也会使用三乙醇胺，将脂肪酸（fatty acid）的酸性转换为硬脂酸盐（stearate），借此作为清洁用品的基本原料。</p>
 <p>不过，三乙醇胺会引发眼睛、头发和皮肤的许多过敏反应。此外，长时间吸收三乙醇胺，体内会因此而产生毒素。</p>
 <p><strong>（※网站专文）</strong></p>
 <h3><span style="color: #000000;"><a style="color: #000000;" href="https://www.books.com.tw/products/0010800222" target="_blank" rel="noopener noreferrer">本文摘自：《<span style="color: #0000ff;">重建免疫疗法：28日细胞分子矫正排毒圣经</span>》，博思智库出版社提供。</a></span></h3>
-<h3><span style="color: #008000;"><a style="color: #008000;" href=><a href="https://github.com/19920513/djy/blob/master/gb/21/8/27/n13191066.md#1" target="_blank" rel="noopener noreferrer">●古人最常用的化妆品是什么？</a></span><br />
-<span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/19920513/djy/blob/master/gb/22/2/10/n13568280.md#1" target="_blank" rel="noopener noreferrer">●口红也中招！90%化妆品有坏菌 教你简单清洁法</a></span><br />
-<span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/19920513/djy/blob/master/gb/21/8/9/n13150022.md#1" target="_blank" rel="noopener noreferrer">●专家：夏天化妆对皮肤有害</a></span></h3>
+<h3><span style="color: #008000;"><a style="color: #008000;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/8/27/n13191066.md#1" target="_blank" rel="noopener noreferrer">●古人最常用的化妆品是什么？</a></span><br />
+<span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/2/10/n13568280.md#1" target="_blank" rel="noopener noreferrer">●口红也中招！90%化妆品有坏菌 教你简单清洁法</a></span><br />
+<span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/8/9/n13150022.md#1" target="_blank" rel="noopener noreferrer">●专家：夏天化妆对皮肤有害</a></span></h3>
 <p>责任编辑：曾臻</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/20/n10320533.md#1">这些产品会令你变美？ 小心扰乱体内荷尔蒙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/2/n11629344.md#1">它和乳癌有关 远离生活中2大“环境荷尔蒙”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/7/n13287053.md#1">致癌有毒或无效 哪些干洗手液上了“黑名单”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/13/n13502520.md#1">护肤品成分天然、见效快不一定好？教你怎么挑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/20/n10320533.md#1">这些产品会令你变美？ 小心扰乱体内荷尔蒙</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/2/n11629344.md#1">它和乳癌有关 远离生活中2大“环境荷尔蒙”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/7/n13287053.md#1">致癌有毒或无效 哪些干洗手液上了“黑名单”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/13/n13502520.md#1">护肤品成分天然、见效快不一定好？教你怎么挑</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13995977.md#1">【未解之谜】离人间仙境一步之遥 他为何放弃了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993884.md#1">大唐传奇公主 聚众美于一身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/5/3/26/n866643.md#1">今天吃什么？神说了算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969695.md#1">【古道人生】富女施恩不望报 贫女受恩不忘人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998906.md#1">【未解之谜】杨贵妃生死之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999107.md#1">【环球直击】郭台铭祝贺侯友宜获征召</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999869.md#1">【财商天下】推特新CEO 找钱打造万能平台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999230.md#1">【菁英论坛】横竖都完蛋 “爱国”侨领当不得</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998109.md#1">俄乌战僵持之际 俄为何开放海参崴港给中共？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999007.md#1">笑果文化演出被全面叫停 网民起底举报者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998728.md#1">“辱军”脱口秀遭重罚 分析：中共心虚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999136.md#1">范冰冰亮相戛纳红毯 竹林老虎图案战袍成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998337.md#1">李亚鹏想靠直播带货还债？连播三天效果堪忧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998430.md#1">与袁弘坐路边吃热干面 张歆艺被拍到瘦得脱相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999223.md#1">71岁洪金宝偕孙子出镜 一细节泄其健康状况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999073.md#1">孙俪练瑜伽挑战高难动作 大热天穿护膝引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997558.md#1">不可不知！你喜欢的颜色会泄露心情与个性</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997697.md#1">这种野草是天然抗生素 急性肝炎、结膜炎用它可解毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13997986.md#1">夏天快到了 专家教你如何预防浴室滋生霉菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13997785.md#1">摄护腺禁忌大全 男性抗老三重点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993058.md#1">房地产市场低迷如何影响你的财务状况？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/12/n13822887.htm">防腐剂易引皮肤发炎 你用的化妆品安全吗？</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/12/n13822887.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/12/n13822887.htm">防腐剂易引皮肤发炎 你用的化妆品安全吗？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/12/n13822887.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
